--- a/index.html
+++ b/index.html
@@ -12,30 +12,34 @@
 
   <div class="card-group">
     <div class="card">
-      <img class="card-img-top" alt="Card image cap">
+      <img class="card-img-top" src="/images/invader.svg" alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <h5 class="card-title">VHDL Space Invaders Project</h5>
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" alt="Card image cap">
+      <img class="card-img-top" src="/images/email.ai" alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <h5 class="card-title">Pattern Recognition and Automation</h5>
       </div>
     </div>
   </div>
+
+  <div class="card-group">
+    <div class="card">
+      <img class="card-img-top" src="/images/madrid.jpg" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">About the Air Quality in Spain's capital Madrid</h5>
+      </div>
+    </div>
+    <div class="card">
+      <img class="card-img-top" src="/images/pde.jpg" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Using Laplace Transformation to calculate Partial Differential Equations</h5>
+      </div>
+    </div>
+  </div>
+
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
