--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="images/email.ai" alt="Card image cap">
+      <img class="card-img-top" src="images/email.png" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Pattern Recognition and Automation</h5>
       </div>
