--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div class="card-group">
     <div class="card">
-      <img class="card-img-top" src="/images/email.ai" alt="Card image cap">
+      <img class="card-img-top" src="/images/email.png" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Pattern Recognition and Automation</h5>
       </div>
