--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
   <div class="card-group">
     <div class="card">
-      <img class="card-img-top" src="/images/email.png" alt="Card image cap">
+      <img id="images" class="card-img-top" src="/images/email.png" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Pattern Recognition and Automation</h5>
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="/images/pde.jpg" alt="Card image cap">
+      <img id="images" class="card-img-top" src="/images/pde.jpg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Using Laplace Transformation to calculate Partial Differential Equations</h5>
       </div>
@@ -27,13 +27,13 @@
 
   <div class="card-group">
     <div class="card">
-      <img class="card-img-top" src="/images/madrid.jpg" alt="Card image cap">
+      <img id="images" class="card-img-top" src="/images/madrid.jpg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">About the Air Quality in Spain's capital Madrid</h5>
       </div>
     </div>
     <div class="card">
-      <img id="space-invader" class="card-img-top" src="/images/invader.png" alt="Card image cap">
+      <img id="images" id="space-invader" class="card-img-top" src="/images/invader.svg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">VHDL Space Invaders Project</h5>
       </div>
