--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
     </div>
     <div class="card">
-      <img id="images" id="space-invader" class="card-img-top" src="/images/invader.svg" alt="Card image cap">
+      <img id="images" id="space-invader" class="card-img-top" src="/images/invader.png" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">VHDL Space Invaders Project</h5>
       </div>
