--- a/index.html
+++ b/index.html
@@ -11,34 +11,41 @@
 <body>
 
   <div class="card-group">
+    <a href="https://github.com/chrischris96/automated-image-processing-with-mail">
     <div class="card">
       <img id="images" class="card-img-top" src="/images/email.png" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Pattern Recognition and Automation</h5>
       </div>
     </div>
+    </a>
+    <a href="https://github.com/chrischris96/Solving_PDE_numerically_using_Laplace_Transformation">
     <div class="card">
       <img id="images" class="card-img-top" src="/images/pde.jpg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Using Laplace Transformation to calculate Partial Differential Equations</h5>
       </div>
     </div>
+    </a>
   </div>
 
   <div class="card-group">
+    <a href="https://github.com/chrischris96/Madrid-Air-Quality">
     <div class="card">
       <img id="images" class="card-img-top" src="/images/madrid.jpg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">About the Air Quality in Spain's capital Madrid</h5>
       </div>
     </div>
+    </a>
+    <a href="https://github.com/chrischris96/Space-Invaders">
     <div class="card">
       <img id="images" id="space-invader" class="card-img-top" src="/images/invader.png" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">VHDL Space Invaders Project</h5>
       </div>
     </div>
-
+    </a>
   </div>
 
 
