--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+  <style media="screen">
+    .img {
+      width: 30%;
+      height: auto;
+    }
+
+    .card-group a {
+      text-decoration: none;
+    }
+  </style>
   <meta charset="utf-8">
   <title>Chris Plitz</title>
   <link href="css/stats.css" rel="stylesheet">
