--- a/index.html
+++ b/index.html
@@ -2,16 +2,6 @@
 <html>
 
 <head>
-  <style media="screen">
-    .img {
-      width: 30%;
-      height: auto;
-    }
-
-    .card-group a {
-      text-decoration: none;
-    }
-  </style>
   <meta charset="utf-8">
   <title>Chris Plitz</title>
   <link href="css/stats.css" rel="stylesheet">
@@ -19,6 +9,11 @@
 </head>
 
 <body>
+
+  <header>
+    <h1>Christian Plitz - Projects overview</h1>
+
+  </header>
 
   <div class="card-group">
     <a href="https://github.com/chrischris96/automated-image-processing-with-mail">
