--- a/index.html
+++ b/index.html
@@ -4,53 +4,56 @@
 <head>
   <meta charset="utf-8">
   <title>Chris Plitz</title>
-  <link href="/css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css" >
 </head>
 
 <body>
+    <header>
+      <h1>Christian Plitz - Projects overview</h1>
+      <a href="https://www.linkedin.com/in/christian-plitz-303180101/"">
+      <img id="linkedin" class="card-img-top" src="/images/linkedin.png" alt="Card image cap">
+      </a>
+    </header>
 
-  <header>
-    <h1>Christian Plitz - Projects overview</h1>
+  <div id="page-wrap2">
+    <div class="card-group">
+      <a href="https://github.com/chrischris96/automated-image-processing-with-mail">
+      <div class="card">
+        <img id="images" class="card-img-top" src="/images/email.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Pattern Recognition and Automation</h5>
+        </div>
+      </div>
+      </a>
+      <a href="https://github.com/chrischris96/Solving_PDE_numerically_using_Laplace_Transformation">
+      <div class="card">
+        <img id="images" class="card-img-top" src="/images/pde.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Using Laplace Transformation to calculate Partial Differential Equations</h5>
+        </div>
+      </div>
+      </a>
+    </div>
 
-  </header>
-
-  <div class="card-group">
-    <a href="https://github.com/chrischris96/automated-image-processing-with-mail">
-    <div class="card">
-      <img id="images" class="card-img-top" src="/images/email.png" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Pattern Recognition and Automation</h5>
+    <div class="card-group">
+      <a href="https://github.com/chrischris96/Madrid-Air-Quality">
+      <div class="card">
+        <img id="images" class="card-img-top" src="/images/madrid.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">About the Air Quality in Spain's capital Madrid</h5>
+        </div>
       </div>
-    </div>
-    </a>
-    <a href="https://github.com/chrischris96/Solving_PDE_numerically_using_Laplace_Transformation">
-    <div class="card">
-      <img id="images" class="card-img-top" src="/images/pde.jpg" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Using Laplace Transformation to calculate Partial Differential Equations</h5>
+      </a>
+      <a href="https://github.com/chrischris96/Space-Invaders">
+      <div class="card">
+        <img id="images" id="space-invader" class="card-img-top" src="/images/invader.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">VHDL Space Invaders Project</h5>
+        </div>
       </div>
+      </a>
     </div>
-    </a>
-  </div>
-
-  <div class="card-group">
-    <a href="https://github.com/chrischris96/Madrid-Air-Quality">
-    <div class="card">
-      <img id="images" class="card-img-top" src="/images/madrid.jpg" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">About the Air Quality in Spain's capital Madrid</h5>
-      </div>
-    </div>
-    </a>
-    <a href="https://github.com/chrischris96/Space-Invaders">
-    <div class="card">
-      <img id="images" id="space-invader" class="card-img-top" src="/images/invader.png" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">VHDL Space Invaders Project</h5>
-      </div>
-    </div>
-    </a>
   </div>
 
 
