--- a/index.html
+++ b/index.html
@@ -2,16 +2,22 @@
 <html>
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137714907-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137714907-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', 'UA-137714907-1');
-  </script>
-
+  gtag('config', 'UA-137714907-1');
+</script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-2381193527615204",
+    enable_page_level_ads: true
+  });
+</script>
   <meta charset="utf-8">
   <title>Chris Plitz</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -36,11 +42,11 @@
         </div>
       </div>
       </a>
-      <a href="https://github.com/chrischris96/Solving_PDE_numerically_using_Laplace_Transformation">
+      <a href="https://github.com/chrischris96/Space-Invaders">
       <div class="card">
-        <img id="images" class="card-img-top" src="/images/pde.jpg" alt="Card image cap">
+        <img id="images" id="space-invader" class="card-img-top" src="/images/invader.png" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Using Laplace Transformation to calculate Partial Differential Equations</h5>
+          <h5 class="card-title">VHDL Space Invaders Project</h5>
         </div>
       </div>
       </a>
@@ -55,11 +61,11 @@
         </div>
       </div>
       </a>
-      <a href="https://github.com/chrischris96/Space-Invaders">
+      <a href="https://github.com/chrischris96/Solving_PDE_numerically_using_Laplace_Transformation">
       <div class="card">
-        <img id="images" id="space-invader" class="card-img-top" src="/images/invader.png" alt="Card image cap">
+        <img id="images" class="card-img-top" src="/images/pde.jpg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">VHDL Space Invaders Project</h5>
+          <h5 class="card-title">Using Laplace Transformation to calculate Partial Differential Equations</h5>
         </div>
       </div>
       </a>
