--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137714907-1"></script>
 <script>
@@ -25,57 +26,71 @@
 </head>
 
 <body>
-    <header>
+
+  <nav class="sticky-top">
+    <div class="cp-hd">
       <h1>Christian Plitz - Projects overview</h1>
-      <a href="https://www.linkedin.com/in/christian-plitz-303180101/"">
+      <a href="https://www.linkedin.com/in/christian-plitz-303180101/">
       <img id="linkedin" class="card-img-top" src="/images/linkedin.png" alt="Card image cap">
       </a>
-    </header>
-
-  <div id="page-wrap2">
-    <div class="card-group">
-      <a href="https://github.com/chrischris96/automated-image-processing-with-mail">
-      <div class="card">
-        <img id="images" class="card-img-top" src="/images/email.png" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Pattern Recognition and Automation</h5>
-        </div>
-      </div>
-      </a>
-      <a href="https://github.com/chrischris96/Space-Invaders">
-      <div class="card">
-        <img id="images" id="space-invader" class="card-img-top" src="/images/invader.png" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">VHDL Space Invaders Project</h5>
-        </div>
-      </div>
-      </a>
     </div>
+  </nav>
 
-    <div class="card-group">
-      <a href="https://github.com/chrischris96/Madrid-Air-Quality">
-      <div class="card">
-        <img id="images" class="card-img-top" src="/images/madrid.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">About the Air Quality in Spain's capital Madrid</h5>
-        </div>
-      </div>
-      </a>
-      <a href="https://github.com/chrischris96/Solving_PDE_numerically_using_Laplace_Transformation">
-      <div class="card">
-        <img id="images" class="card-img-top" src="/images/pde.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Using Laplace Transformation to calculate Partial Differential Equations</h5>
-        </div>
-      </div>
-      </a>
-    </div>
+  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+    <a href="https://twitter.com/ChristianPlitz">
+      <img id="retiro" class="card-img-top" src="/images/ChrisRetiro.jpg" alt="Card image cap">
+    </a>
   </div>
 
+  <div class="d-md-flex flex-md-equal w-100 my-md-2 pl-md-3">
+    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-3 px-md-5 text-center overflow-hidden">
+      <a href="Madrid-Air-Quality.html">
+        <div class="my-3 py-3">
+          <h5 class="display-5">About the Air Quality in Spain's capital Madrid</h5>
+          <img id="images" class="card-img-top" src="/images/madrid.jpg" alt="Card image cap">
+        </div>
+        <div class="bg-light shadow-sm mx-auto"></div>
+      </a>
+    </div>
+    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-2 px-md-5 text-center overflow-hidden">
+      <a href="Solving_PDE_numerically_using_Laplace_Transformation.html">
+      <div class="my-3 py-3">
+        <h5 class="display-5">Using Laplace Transformation to calculate PDEs</h5>
+        <img id="images" class="card-img-top" src="/images/pde.jpg" alt="Card image cap">
+      </div>
+      <div class="bg-light shadow-sm mx-auto"></div>
+    </a>
+    </div>
+    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-2 px-md-5 text-center overflow-hidden">
+      <a href="Space-Invaders.html">
+      <div class="my-3 py-3">
+        <h5 class="display-5">The VHDL Space Invaders Project</h5>
+        <img id="images" id="space-invader" class="card-img-top" src="/images/invader.png" alt="Card image cap">
+      </div>
+      <div class="bg-light shadow-sm mx-auto"></div>
+      </a>
+    </div>
+    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-2 px-md-5 text-center overflow-hidden">
+    <a href="automated-image-processing-with-mail.html">
+      <div class="my-3 py-3">
+        <h5 class="display-5">Pattern Recognition and Automation</h5>
+        <img id="images" class="card-img-top" src="/images/email.png" alt="Card image cap">
+      </div>
+      <div class="bg-light shadow-sm mx-auto" ></div>
+    </a>
+    </div>
+  </div>
+  
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <footer class="footer mt-auto py-3">
+    <div class="container">
+      <span class="text-muted">Chris Plitz 2019©</span>
+    </div>
+  </footer>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
+
+
 </body>
-
 </html>
