--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     </div>
   </nav>
 
+
+  <main role="main" class="container">
   <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
     <a href="https://twitter.com/ChristianPlitz">
       <img id="retiro" class="card-img-top" src="/images/ChrisRetiro.jpg" alt="Card image cap">
@@ -80,7 +82,9 @@
     </a>
     </div>
   </div>
-  
+</main>
+
+
 
   <footer class="footer mt-auto py-3">
     <div class="container">
