--- a/index.html
+++ b/index.html
@@ -36,15 +36,16 @@
     </div>
   </nav>
 
-
-  <main role="main" class="container">
-  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
-    <a href="https://twitter.com/ChristianPlitz">
-      <img id="retiro" class="card-img-top" src="/images/ChrisRetiro.jpg" alt="Card image cap">
-    </a>
+  <div class=" justify-content-center flex-md-equal w-100 my-md-2 pl-md-3">
+    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-3 px-md-5 text-center overflow-hidden">
+      <a href="https://twitter.com/ChristianPlitz">
+        <img id="retiro" class="card-img-top" src="/images/ChrisRetiro.jpg" alt="Card image cap">
+      </a>
+    </div>
   </div>
 
-  <div class="d-md-flex flex-md-equal w-100 my-md-2 pl-md-3">
+
+  <div class="d-md-flex justify-content-center flex-md-equal w-100 my-md-2 pl-md-3">
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-3 px-md-5 text-center overflow-hidden">
       <a href="Madrid-Air-Quality.html">
         <div class="my-3 py-3">
@@ -82,8 +83,6 @@
     </a>
     </div>
   </div>
-</main>
-
 
 
   <footer class="footer mt-auto py-3">
