--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </div>
 
 
-  <div class="d-md-flex justify-content-center flex-md-equal w-100 my-md-2 pl-md-3">
+  <div class="d-md-flex flex-md-equal w-100 my-md-2 pl-md-3">
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-3 px-md-5 text-center overflow-hidden">
       <a href="Madrid-Air-Quality.html">
         <div class="my-3 py-3">
