--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </a>
     </div>
   </nav>
-
+<main>
   <div class="flex-md-equal w-100 my-md-2 pl-md-3">
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-3 px-md-5 text-center overflow-hidden">
       <a href="https://twitter.com/ChristianPlitz">
@@ -43,7 +43,6 @@
       </a>
     </div>
   </div>
-
 
   <div class="d-md-flex flex-md-equal w-100 my-md-2 pl-md-3">
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-3 px-md-5 text-center overflow-hidden">
@@ -83,6 +82,7 @@
     </a>
     </div>
   </div>
+</main>
 
 
   <footer class="footer mt-auto py-3">
