--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
   </nav>
 <main>
-  <div class="flex-md-equal w-100 my-md-2 pl-md-3">
+  <div class="this-me flex-md-equal w-100 my-md-2 pl-md-3">
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-3 px-md-5 text-center overflow-hidden">
       <a href="https://twitter.com/ChristianPlitz">
         <img id="retiro" class="card-img-top" src="/images/ChrisRetiro.jpg" alt="Card image cap">
