--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <nav class="sticky-top">
     <div class="cp-hd">
-      <h1>Christian Plitz - Projects overview</h1>
+      <h1>Chris Plitz - Projects overview</h1>
       <a href="https://www.linkedin.com/in/christian-plitz-303180101/">
       <img id="linkedin" class="card-img-top" src="/images/linkedin.png" alt="Card image cap">
       </a>
@@ -44,7 +44,7 @@
     </div>
   </div>
 
-  <div class="d-md-flex flex-md-equal w-100 my-md-2 pl-md-3">
+  <div class="proj d-md-flex flex-md-equal w-100 my-md-2 pl-md-3">
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-3 px-md-5 text-center overflow-hidden">
       <a href="Madrid-Air-Quality.html">
         <div class="my-3 py-3">
