--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
       <div class="bg-light shadow-sm mx-auto"></div>
     </a>
     </div>
+  </div>
+  <div class="proj d-md-flex flex-md-equal w-100 my-md-2 pl-md-3">
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-2 px-md-5 text-center overflow-hidden">
       <a href="Space-Invaders.html">
       <div class="my-3 py-3">
