--- a/Space-Invaders.html
+++ b/Space-Invaders.html
@@ -29,7 +29,10 @@
 
   <nav class="sticky-top">
     <div class="cp-hd">
-      <h1>Christian Plitz - Projects overview</h1>
+      <a href="../">
+      <h1>Chris Plitz - Projects overview</h1>
+      <img id="homeicon" class="card-img-top" src="/images/home.png">
+      </a>
       <a href="https://www.linkedin.com/in/christian-plitz-303180101/">
       <img id="linkedin" class="card-img-top" src="/images/linkedin.png" alt="Card image cap">
       </a>
@@ -38,15 +41,15 @@
 
   <main role="main" class="container">
     <div class="jumbotron">
-      <h1>Navbar example</h1>
-      <p class="lead">This example is a quick exercise to illustrate how the top-aligned navbar works. As you scroll, this navbar remains in its original position and moves with the rest of the page.</p>
+      <h1>Space Invaders</h1>
+      <p class="lead">Famous computer game coded in VHDL. Playable with FPGA board and Monitor - Try it!</p>
       <a class="btn btn-lg btn-primary" href="https://github.com/chrischris96/Space-Invaders" role="button">GitHub»</a>
     </div>
   </main>
 
   <footer class="footer mt-auto py-3">
     <div class="container">
-      <span class="text-muted">Chris Plitz 2019©</span>
+      <span class="text-muted">Chris Plitz 2019 ©</span>
     </div>
   </footer>
 
