--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
 
   <nav class="sticky-top">
     <div class="cp-hd">
+      <a href="/">
       <h1>Chris Plitz - Projects overview</h1>
+      </a>
+        <a href="/">
+          <img id="homeicon" class="card-img-top" src="/images/home.png">
+        </a>
       <a href="https://www.linkedin.com/in/christian-plitz-303180101/">
       <img id="linkedin" class="card-img-top" src="/images/linkedin.png" alt="Card image cap">
       </a>
@@ -89,7 +94,7 @@
 
   <footer class="footer mt-auto py-3">
     <div class="container">
-      <span class="text-muted">Chris Plitz 2019©</span>
+      <span class="text-muted">Chris Plitz 2019 ©</span>
     </div>
   </footer>
 
