--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="/">
           <img id="homeicon" class="card-img-top" src="/images/home.png">
         </a>
-      <a href="https://www.linkedin.com/in/christian-plitz-303180101/" onclick="document.getElementById('contents1').style.cssText = ''">
+      <a href="#" onclick="document.getElementById('contents1').style.cssText = ''">
         <img id="linkedin" class="card-img-top" src="/images/linkedin.png" alt="Card image cap">
       </a>
 
