--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img id="linkedin" class="card-img-top" src="/images/linkedin.png" alt="Card image cap">
       </a>
 
-      <div id="contents1" style="display:none;">
+      <div id="contents1">
         <iframe src="https://www.linkedin.com/in/christian-plitz-303180101/" width=100%>
       </div>
 
